testsuite/tests/typecheck/should_fail/T15883c.stderr

T15883c.hs:14:1: error:
    • Can't make a derived instance of
        ‘Ord (Foo ('BoxedRep 'Lifted))’ with the stock strategy:
        Don't know how to derive ‘Ord’ for type ‘forall (a :: TYPE rep). a’
    • In the stand-alone deriving instance for
        ‘Ord (Foo (BoxedRep Lifted))’
